<resources>
    <string name="app_name">ExchangeRate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="main_activity_title">Watched banks</string>
    <string name="choose_bank_activity_title">Choose bank</string>
    <string name="ok">OK</string>
    <string name="no_banks_message">You don\'t have watched banks yet. You can add them clicking button below.</string>
    <string name="ws_bank_title">You need to choose bank and currency, to display on the widget.</string>
    <string name="ws_currency_title">Choose currency.</string>
    <string name="ws_bank_hint">Bank</string>
    <string name="ws_currency_hint">Currency.</string>
    <string name="ws_save">Save</string>
    <string name="currency">Currency</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <array name="bankNames">
    <item name="nbu">National Bank of Ukraine</item>
    <item name="privatBank">Private Bank</item>
    <item name="a_Bank">A-Bank</item>
    <item name="alfa_bank">Alfa-Bank</item>
    <item name="otp_bank">OTP Bank</item>
    <item name="raiffeizen_bank_aval">Raiffeizen BANK AVAL</item>
    <item name="ukrsibbank">UKRSIBBANK</item>
    </array>
</resources>
